	S4 methods to be set on it without name space scoping issues.

	Added "difftime" method for xtfrm().

    o	is.numeric(x) is now false for a "difftime" object
	(multiplication and division make no sense for such objects).

    o	The default method of weighted.mean(x, w) coerces 'w' to be
	numeric (aka double); previously only integer weights were
	coerced.


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)




	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0 patched


NEW FEATURES

    o	The PCRE library has been updated to version 8.00.

    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,
	--no-help, --no-demo, --no-exec, and --no-inst to suppress
	installation of the specified part of the package.  These are
	intended for special purposes (e.g. building a database
	of help pages without fully installing all packages).


INSTALLATION

    o	configure will be able to find a usable libtiff in some rare
	circumstances where it did not previously (where libtiff
	needed to be linked explicitly against -ljpeg).

    o	Making refman.pdf works around a problem with the indexing
	with hyperref 6.79f.


DEPRECATED & DEFUNCT

    o	The 'extended' argument is deprecated in strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() (not just the
	value extended = FALSE) and will be removed in R 2.11.0.


BUG FIXES
