@@ -529,5 +529,6 @@ S3method(cophenetic, default)
 S3method(cophenetic, dendrogram)
 S3method(weighted.mean, Date)
 S3method(weighted.mean, default)
+S3method(weighted.mean, difftime)
 S3method(weighted.mean, POSIXct)
 S3method(weighted.mean, POSIXlt)
