@@ -24,7 +24,8 @@ weighted.mean.default <- function(x, w, ..., na.rm = FALSE)
         stop("'x' and 'w' must have the same length")
     w <- as.double(w) # avoid overflow in sum for integer weights.
     if (na.rm) { i <- !is.na(x); w <- w[i]; x <- x[i] }
-    sum(x*(w/sum(w)))
+    w <- w/sum(w)
+    sum((x*w)[w != 0])
 }
 
 ## see note for ?mean.Date
@@ -32,9 +33,13 @@ weighted.mean.Date <- function (x, w, ...)
     structure(weighted.mean(unclass(x), w, ...), class = "Date")
 
 weighted.mean.POSIXct <- function (x, w, ...)
-    structure(weighted.mean(unclass(x), w, ...), class = c("POSIXt", "POSIXct"),
+    structure(weighted.mean(unclass(x), w, ...),
+              class = c("POSIXt", "POSIXct"),
               tzone = attr(x, "tzone"))
 
 weighted.mean.POSIXlt <- function (x, w, ...)
     as.POSIXlt(weighted.mean(as.POSIXct(x), w, ...))
 
+weighted.mean.difftime <- function (x, w, ...)
+    structure(weighted.mean(unclass(x), w, ...),
+              units = attr(x, "units"), class = "difftime")
